# jamclub-rust

./: .gitignore  README.md
discord-cmd-slash/: Cargo.toml  env.template
discord-cmd-slash/src/: main.rs
jamclub_csvimport/: Cargo.toml
jamclub_csvimport/download/: csv_import.py  download.sh  env.template
jamclub_csvimport/src/: main.rs  mod.rs  prelude.rs
jamclub_csvimport/src/error/: error.rs  mod.rs  prelude.rs
jamclub_csvimport/src/jamclub_csv/: csv_collectives.rs  csv_encounters.rs  csv_enums.rs  csv_events.rs  csv_import.rs  csv_lineups.rs  csv_locations.rs  csv_members.rs  csv_volunteers.rs  mod.rs  prelude.rs  toseaorm_enums.rs
jamclub_seaorm/: Cargo.toml  Dockerfile  build_postgres.sh  cmd_postgres.sh  docker-compose.yml  env.template  generate_sea_orm_code.sh
jamclub_seaorm/sql/: jamclub.sql
jamclub_seaorm/src/: error.rs  lib.rs  model_controller.rs  prelude.rs
jamclub_seaorm/src/entities/: bot.rs  bots.rs  collectives.rs  collectives_referents.rs  collectives_subscribers.rs  display.rs  encounters.rs  encounters_absents.rs  encounters_participants.rs  events.rs  events_lineups.rs  events_volunteers.rs  lineups.rs  lineups_subscribers.rs  locations.rs  members.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  volunteers.rs
