[package]
name = "discord-cmd-slash"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.2", features = ["builder", "framework", "standard_framework"] }
poise = "0.6.1"
tokio = { version = "1.38.1" , features = ["full"] }
dotenvy = "0.15.7"
jamclub_seaorm = { path = "../jamclub_seaorm" }
sea-orm = { version = "1.0.0", features = ["uuid", "runtime-async-std", "sqlx-postgres", "postgres-array", "chrono", "bigdecimal", "serde_json"] }
chrono = "0.4.38"
env_logger = "0.11.5"
log = "0.4.22"
