[package]
name = "jamclub_seaorm"
version = "0.1.0"
edition = "2021"
target = "src/main.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9.0"
dotenvy = "0.15.7"
sea-query = "0.30.7"
thiserror = "1.0.63"
futures = "0.3.30"
sea-orm = { version = "1.0.0", features = ["uuid", "runtime-async-std", "sqlx-postgres", "postgres-array", "chrono", "bigdecimal", "serde_json"] }
sqlx = { version = "0.7.4", features = [ "runtime-async-std" ]}
async-std = { version = "1.12.0", features = ["attributes"] }
log = "0.4.22"
